# HyDocPusher

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD-md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: classification-rules.yaml
docs/: README.md
docs/ai-context/: deployment-infrastructure.md  docs-overview.md  handoff.md  project-structure.md  system-integration.md
docs/design/: component-design.md  develop-plan-design.md  functional-design.md
docs/development/: progress-tracking.md  tdd-development-plan.md
hydocpusher/client/: archive_client.py  retry_handler.py
hydocpusher/config/: __init__.py  classification_config.py  settings.py
hydocpusher/consumer/: __init__.py  dead_letter_queue.py  message_handler.py  pulsar_consumer.py
hydocpusher/exceptions/: __init__.py  custom_exceptions.py
hydocpusher/models/: __init__.py  archive_models.py  message_models.py
hydocpusher/services/: __init__.py  health_server.py  health_service.py
hydocpusher/transformer/: __init__.py  attachment_builder.py  data_transformer.py  field_mapper.py
tests/: conftest.py  test_main.py
tests/integration/: test_dead_letter_queue_integration.py  test_end_to_end.py  test_message_handler_integration.py  test_performance.py  test_pulsar_consumer.py  test_pulsar_producer.py
tests/test_client/: __init__.py  test_archive_client.py
tests/test_config/: test_classification_config.py  test_settings.py
tests/test_consumer/: __init__.py  test_dead_letter_queue.py  test_message_handler.py  test_pulsar_consumer.py
tests/test_exceptions/: test_custom_exceptions.py
tests/test_models/: __init__.py  test_data_models.py
tests/test_services/: __init__.py  test_health_server.py  test_health_service.py
tests/test_transformer/: __init__.py  test_transformer.py
tests/unit/: test_archive_client.py  test_retry_handler.py
